# HW_27

./: .gitignore  pyproject.toml  pytests.ini
ads/: models.py  premissions.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_description_alter_ad_price.py  0002_alter_ad_options_alter_category_options_and_more.py  0002_initial.py  0003_alter_ad_name.py  0004_alter_ad_description.py  0005_rename_category_ad_category_id.py  0006_rename_author_ad_author_id.py
ads/serializers/: serializers_ad.py  serializers_cat.py
ads/urls/: ad_urls.py  cat_urls.py
data/: constants.py  convert.py  utils.py
data/json_data/: user.json
hw_27/: settings.py  urls.py
postgres_hw27/: docker-compose.yaml
selections/: models.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py  0002_initial.py  0002_rename_owmer_selection_owner.py
test_http/: ads.http  auth.http  category.http  location.http  selections.http  users.http
tests/: conftest.py  factories.py  fixtures.py  urls_test.py
tests/ads/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py
tests/selections/: selections_create_test.py
users/: models.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_last_name.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_age_user_location.py  0004_remove_user_location_user_location.py  0005_rename_location_user_locations.py  0006_rename_locations_user_location_id.py  0007_remove_user_location_id_user_location.py  0008_remove_user_location_user_location.py  (+2 more)
(+1 files in other folders)
